modifying right side menu

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -22,7 +22,7 @@
       </mat-expansion-panel>
       <mat-expansion-panel [class.mat-elevation-z0]="true" dense>
         <mat-expansion-panel-header>
-          Components
+          Manage
         </mat-expansion-panel-header>
         <mat-nav-list dense>
           <a mat-list-item routerLink="/concessions">
@@ -51,18 +51,28 @@
         <mat-expansion-panel-header>
           Budgets
         </mat-expansion-panel-header>
-        <mat-list-item>
+        <!-- <mat-list-item>
           <a mat-list-item routerLink='#'>
             <mat-icon>bar_chart</mat-icon>
             Budgets</a>
-        </mat-list-item>
+        </mat-list-item> -->
         <mat-list-item>
           <a mat-list-item routerLink='/budgetActual'>
             <mat-icon>bar_chart</mat-icon>
             Budgets Vs Act</a>
         </mat-list-item>
+        <mat-list-item>
+          <a mat-list-item routerLink='/productionbudget'>
+            <mat-icon>bar_chart</mat-icon>
+            Production Budget</a>
+        </mat-list-item>
+        <mat-list-item>
+          <a mat-list-item routerLink='/pgi'>
+            <mat-icon>bar_chart</mat-icon>
+            Production General Info</a>
+        </mat-list-item>
       </mat-expansion-panel>
-      <mat-expansion-panel>
+      <!-- <mat-expansion-panel>
         <mat-expansion-panel-header>
           Temporary
         </mat-expansion-panel-header>
@@ -72,15 +82,15 @@
         <mat-list-item>
           <a mat-list-item routerLink='/tests'>Well Tests</a>
         </mat-list-item>
-      </mat-expansion-panel>
-      <a mat-list-item routerLink='/home'>Home</a>
+      </mat-expansion-panel> -->
+      <!-- <a mat-list-item routerLink='/home'>Home</a>
       <a mat-list-item routerLink='/login'>login</a>
       <a mat-list-item routerLink='/registration'>Registration</a>
       <a mat-list-item routerLink='/dashboard'>DashBoard</a>
       <a mat-list-item routerLink='/concessions'>concessions</a>
-      <a mat-list-item routerLink='/Tests'>All Well Tests</a>
+      <a mat-list-item routerLink='/Tests'>All Well Tests</a> -->
       <!-- the next line is to be updated -->
-      <a mat-list-item routerLink='/tests'>All Tests fora well</a>
+      <!-- <a mat-list-item routerLink='/tests'>All Tests fora well</a> -->
     </mat-nav-list>
   </mat-sidenav>
 
