Set concession cards and handle back button functionality

--- a/src/app/components/field-nav/field-nav.component.html
+++ b/src/app/components/field-nav/field-nav.component.html
@@ -4,7 +4,12 @@
         <br />
         <div class="row">
           <div class="col-md-12">
-            <button class="btn btn-danger">BACK</button>
+
+              <button type="button" class="btn btn-default btn-sm" (click)="back()">
+                <span class="glyphicon glyphicon-chevron-left"></span> Left
+              </button>
+            <br>
+<!--            <button class="btn btn-danger" (click)="back()">BACK</button>-->
           </div>
         </div>
         <div class="row">
