--- a/src/app/components/concession-nav/concession-nav.component.html
+++ b/src/app/components/concession-nav/concession-nav.component.html
@@ -1,35 +1,55 @@
 <div class="container">
-    <div class="card">
-      <div class="card-body">
-        <br />
-        <div class="row">
-          <div class="col-md-12">
-            <button class="btn btn-danger">BACK</button>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <table class="table table-bordered table-hover">
-              <thead>
-                <tr>
-                  <th style="display: none">#</th>
-                  <th>Id</th>
-                  <th>Name</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr
-                  *ngFor="let con of allConcessions; let currentIndex = index"
-                  (click)="navToConFields(currentIndex)"
-                >
-                  <td style="display: none">{{ currentIndex + 1 }}</td>
-                  <td>{{ con.id }}</td>
-                  <td>{{ con.name }}</td>
-                </tr>
-              </tbody>
-            </table>
+  <div class="card">
+    <div class="card-body">
+      <br/>
+<!--      <div class="row">-->
+<!--        <div class="col-md-12">-->
+<!--          <button class="btn btn-danger">BACK</button>-->
+<!--        </div>-->
+<!--      </div>-->
+      <br>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row card-group">
+            <div class="col-4" *ngFor="let con of allConcessions; let currentIndex = index"
+                 (click)="navToConFields(currentIndex)">
+              <div class="card text-center align-text-bottom p-5 bg-light mb-3 " style="height: 150px ; width: 200px ;margin-bottom: 30px;">
+                <div class="card-body">
+                  <div class="text">
+                    {{ con.name }}
+                  </div>
+
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
+<!--            <div class="card" >-->
+<!--              <div class="card-body">-->
+<!--                This is some text within a card body.-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <table class="table table-bordered table-hover">-->
+<!--              <thead>-->
+<!--                <tr>-->
+<!--                  <th style="display: none">#</th>-->
+<!--                  <th>Id</th>-->
+<!--                  <th>Name</th>-->
+<!--                </tr>-->
+<!--              </thead>-->
+<!--              <tbody>-->
+<!--                <tr-->
+<!--                  *ngFor="let con of allConcessions; let currentIndex = index"-->
+<!--                  (click)="navToConFields(currentIndex)"-->
+<!--                >-->
+<!--                  <td style="display: none">{{ currentIndex + 1 }}</td>-->
+<!--                  <td>{{ con.id }}</td>-->
+<!--                  <td>{{ con.name }}</td>-->
+<!--                </tr>-->
+<!--              </tbody>-->
+<!--            </table>-->
+
