fixing design, maybe!

--- a/src/app/components/field-nav/field-nav.component.html
+++ b/src/app/components/field-nav/field-nav.component.html
@@ -5,10 +5,13 @@
         <div class="row">
           <div class="col-md-12">
 
-              <button type="button" class="btn btn-default btn-sm" (click)="back()">
-                <span class="glyphicon glyphicon-chevron-left"></span> Left
+              <button style="font-size :45px;" type="button" class="btn btn-default btn-sm" (click)="back()">
+                <span class="glyphicon glyphicon-chevron-left"></span> 
+                <!-- <i class="fas fa-arrow-circle-left"></i>  -->
+                  <!-- &lt;= BACK -->
+                  ⬅
               </button>
-            <br>
+            <!-- <br> -->
 <!--            <button class="btn btn-danger" (click)="back()">BACK</button>-->
           </div>
         </div>
