splitting pgi table and adding it in the tables tab page

--- a/src/app/components/production-general-info/production-general-info.component.html
+++ b/src/app/components/production-general-info/production-general-info.component.html
@@ -1,7 +1,7 @@
 <!-- <p>fluid-level-measurements works!</p> -->
 <div class="container">
-    <div class="card">
-      <div class="card-body">
+    <!-- <div class="card">
+      <div class="card-body"> -->
         <br />
         <div class="row">
           <div class="col-md-12">
@@ -16,7 +16,7 @@
                   <span aria-hidden="true">×</span>
                 </button>
               </div>
-              <app-add-new-pgi (closeModal)=closePopUpAndRefreshTable()></app-add-new-pgi>
+              <app-add-new-pgi [id]="id" (closeModal)=closePopUpAndRefreshTable()></app-add-new-pgi>
             </ng-template>
   
             <ng-template #modalDataUpdate let-modal>
@@ -26,7 +26,7 @@
                   <span aria-hidden="true">×</span>
                 </button>
               </div>
-              <app-update-pgi [pgiToBeUpdated]="pgiToBeUpdated" (closeModal)=closePopUpAndRefreshTable()></app-update-pgi>
+              <app-update-pgi [id]="id" [pgiToBeUpdated]="pgiToBeUpdated" (closeModal)=closePopUpAndRefreshTable()></app-update-pgi>
             </ng-template>
   
           </div>
@@ -47,13 +47,13 @@
                   <th>currentWellType</th>
                   <th>currentWellTypeDate</th>
                   <th>currentProduct</th>
-                  <th>currentStatus</th>
+                  <!-- <th>currentStatus</th>
                   <th>runtime</th>
                   <th>currentLiftType</th>
                   <th>currentLiftTypeDate</th>
                   <th>powerSourceType</th>
                   <th>powerSource</th>
-                  <th>processionPlant</th>
+                  <th>processionPlant</th> -->
                 </tr>
               </thead>
               <tbody>
@@ -73,6 +73,38 @@
                   <td>{{ pgi.currentWellType }}</td>
                   <td>{{ pgi.currentWellTypeDate | date: "MM-dd-yyyy" }}</td>
                   <td>{{ pgi.currentProduct }}</td>
+                  <!-- <td>{{ pgi.currentStatus }}</td>
+                  <td>{{ pgi.runtime }}</td>
+                  <td>{{ pgi.currentLiftType }}</td>
+                  <td>{{ pgi.currentLiftTypeDate | date: "MM-dd-yyyy" }}</td>
+                  <td>{{ pgi.powerSourceType }}</td>
+                  <td>{{ pgi.powerSource }}</td>
+                  <td>{{ pgi.processionPlant }}</td> -->
+                </tr>
+              </tbody>
+            </table>
+            <br>
+            <table class="table table-bordered table-hover">
+              <thead>
+                <tr>
+                  <th style="display: none">#</th>
+                  <th>Id</th>
+                  <th>currentStatus</th>
+                  <th>runtime</th>
+                  <th>currentLiftType</th>
+                  <th>currentLiftTypeDate</th>
+                  <th>powerSourceType</th>
+                  <th>powerSource</th>
+                  <th>processionPlant</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr
+                  *ngFor="let pgi of pgis; let currentIndex = index"
+                  (click)="ClickedRowToDelete(currentIndex); ClickedRowToUpdate(currentIndex)"
+                  [class.active]="currentIndex == highlightedRow"
+                >
+                  <td>{{ pgi.id }}</td>
                   <td>{{ pgi.currentStatus }}</td>
                   <td>{{ pgi.runtime }}</td>
                   <td>{{ pgi.currentLiftType }}</td>
@@ -85,7 +117,7 @@
             </table>
           </div>
         </div>
-      </div>
-    </div>
+      <!-- </div>
+    </div> -->
   </div>
   
