--- a/src/app/components/well-tabs/well-tabs.component.html
+++ b/src/app/components/well-tabs/well-tabs.component.html
@@ -5,6 +5,9 @@
   <mat-tab label="Well Drilling Info">
     <app-drilling-info [id]="id"></app-drilling-info>
   </mat-tab>
+  <mat-tab label="Production General Info">
+    <app-production-general-info [id]="id"></app-production-general-info>
+  </mat-tab>
   <mat-tab label="Well Intervals Info">
     <app-intervals-info [id]="id"></app-intervals-info>
   </mat-tab>
