--- a/src/app/components/field/field.component.html
+++ b/src/app/components/field/field.component.html
@@ -4,9 +4,9 @@
       <br />
       <div class="row">
         <div class="col-md-12">
-          <button class="btn btn-danger" (click)="deleteFromfields()">🗑️</button>
-          <button *ngIf="highlightedRow !== -1" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
-          <button class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
+          <button *ngIf="highlightedRow !== -1 && +role === 2" class="btn btn-danger" (click)="deleteFromfields()">🗑️</button>
+          <button *ngIf="highlightedRow !== -1 && +role === 2" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
+          <button *ngIf="+role === 2" class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
 
           <ng-template #modalData let-modal>
             <div class="modal-header">
