--- a/src/app/components/lab-measurement/lab-measurement.component.html
+++ b/src/app/components/lab-measurement/lab-measurement.component.html
@@ -5,9 +5,9 @@
 		<br />
 		<div class="row"> 
 		  <div class="col-md-12">
-			<button *ngIf="highlightedRow !== -1"class="btn btn-danger" (click)="deleteFromLabs()">🗑️</button>
-			<button *ngIf="highlightedRow !== -1" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
-			<button class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
+			<button *ngIf="highlightedRow !== -1 && (concession === jobLocation || +role === 2)" class="btn btn-danger" (click)="deleteFromLabs()">🗑️</button>
+			<button *ngIf="highlightedRow !== -1 && (concession === jobLocation || +role === 2)" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
+			<button *ngIf="(concession === jobLocation || +role === 2)" class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
 			<button class="btn btn-primary" (click)="triggerModal(modalChart)" >📊</button>  
 			<ng-template #modalData let-modal>
 			  <div class="modal-header">
