--- a/src/app/components/daily-actions/daily-actions.component.html
+++ b/src/app/components/daily-actions/daily-actions.component.html
@@ -5,9 +5,9 @@
 		<br />
 		<div class="row">
 		  <div class="col-md-12">
-			<button *ngIf="highlightedRow !== -1" class="btn btn-danger" (click)="deleteFromReports()">🗑️</button>
-			<button *ngIf="highlightedRow !== -1" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
-			<button class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
+			<button *ngIf="highlightedRow !== -1 &&( concession === jobLocation || userRole ==='2')" class="btn btn-danger" (click)="deleteFromReports()">🗑️</button>
+			<button *ngIf="highlightedRow !== -1 &&( concession === jobLocation || userRole ==='2')" class="btn btn-warning" (click)="triggerModal(modalDataUpdate)">🖊️</button>
+			<button *ngIf="concession === jobLocation || userRole ==='2'" class="btn btn-primary" (click)="triggerModal(modalData)" >➕</button>
 
 
 			<ng-template #modalData let-modal>
@@ -19,7 +19,7 @@
 			  </div>
 			  <app-add-new-report [id]="id" (closeModal)=closePopUpAndRefreshTable()></app-add-new-report>
 			</ng-template>
-  
+
 			<ng-template #modalDataUpdate let-modal>
 			  <div class="modal-header">
 				<h4 class="modal-title" id="modal-basic-title">Update A Report Record</h4>
@@ -29,7 +29,7 @@
 			  </div>
 			  <app-update-report [id]="id" [reportToBeUpdate]="reportToBeUpdate" (closeModal)=closePopUpAndRefreshTable()></app-update-report>
 			</ng-template>
-  
+
 		  </div>
 		</div>
 		<div class="row">
