--- a/src/app/components/drilling-info/drilling-info.component.html
+++ b/src/app/components/drilling-info/drilling-info.component.html
@@ -6,14 +6,14 @@
 
       <div class="row">
         <div class="col-md-12">
-          <button (click)="delete()" type="button" class="btn btn-danger">
+          <button *ngIf="HighlightRow !== -1 &&(concession === jobLocation || userRole ==='2')" (click)="delete()" type="button" class="btn btn-danger">
             DELETE
           </button>
-          <button class="btn btn-primary" (click)="triggerModal(modalData)">
+          <button  *ngIf="(concession === jobLocation|| userRole=='2')" class="btn btn-primary" (click)="triggerModal(modalData)">
             ➕
           </button>
           <button
-            *ngIf="HighlightRow !== -1"
+            *ngIf="HighlightRow !== -1 &&( concession === jobLocation || userRole == '2')"
             class="btn btn-warning"
             (click)="triggerModal(modalDataUpdate)"
           >
