--- a/src/app/well-general-info-chart/well-general-info-chart.component.html
+++ b/src/app/well-general-info-chart/well-general-info-chart.component.html
@@ -4,5 +4,6 @@
     [chart]="chartOptions.chart"
     [xaxis]="chartOptions.xaxis"
     [yaxis]="chartOptions.yaxis"
+    [title]="chartOptions.title"
   ></apx-chart>
 </div>
