--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -23,7 +23,7 @@
       <div class="alert alert-warning" *ngIf="phoneNumber.dirty && phoneNumber.invalid">Phone number is not valid</div>
 
       <br>
-      <label>Job title</label>
+      <!-- <label>Job title</label>
       <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           {{jobTitles[userRequest.jobTitle-1]}}
@@ -32,7 +32,7 @@
           <a class="dropdown-item" (click)="setJobTitle(1)">Office Engineer</a>
           <a class="dropdown-item" (click)="setJobTitle(2)">Field Engineer</a>
         </div>
-      </div>
+      </div> -->
       <br>
       <label>Job Location</label>
       <div class="dropdown">
