--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -1,1 +1,76 @@
-<!-- <button (click)="generatePDF()">Generate PDF</button>   -->
+<head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+<script type="text/javascript" src="html2canvas.js"></script> // 1.0.0-alpha.12 downloaded
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+ <script src="es6-promise.auto.min.js"></script>
+ <script src="jspdf.min.js"></script>
+ <script src="html2canvas.min.js"></script>
+ <script src="html2pdf.min.js"></script>
+ <style>
+   table, th, td {
+  border: 1px solid black;
+}
+th {
+  background-color: #0000FF;
+  color: white;
+}
+ </style>
+</head>
+<body>
+<div id="pdfContent">
+  <br><br><br><br>
+
+  <h1>
+Agiba Petroleum Company
+Operations Department;
+Petroleum engineering section
+  </h1>
+
+  <div class="row">
+    <div class="col-md-12">
+    <table class="table table-bordered table-hover">
+      <thead>
+      <tr>
+        <th>Id</th>
+        <th>wellId</th>
+        <th>Date</th>
+        <th>remarks</th>
+        <th>s1</th>
+        <th>s2</th>
+        <th>s3</th>
+        <th>s4</th>
+        <th>s5</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr
+        *ngFor="let lab of labs;let currentIndex = index"
+      >
+        <td style="display: none">{{ currentIndex + 1 }}</td>
+        <td>{{lab.id}}</td>
+        <td>{{lab.wellId}}</td>
+        <td>{{lab.date | date: 'dd-MM-yyyy'}}</td>
+        <td>{{lab.remarks}}</td>
+        <td>{{lab.s1}}</td>
+        <td>{{lab.s2}}</td>
+        <td>{{lab.s3}}</td>
+        <td>{{lab.s4}}</td>
+        <td>{{lab.s5}}</td>
+      </tr>
+      </tbody>
+    </table>
+    </div>
+  </div> 
+  <h1>
+Labs                      
+      </h1>
+      <h4>
+Date: -----------------------
+          </h4>
+</div>
+
+</body>
+
+   <button (click)="genPDF()">Generate PDF</button>
+
