--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,4 +1,4 @@
-/*.sidenav-container {
+/* .sidenav-container {
   height: 100%;
 }
 
@@ -6,13 +6,13 @@
   width: 230px;
   background-color: #141c23;
   color: white;
-}
+} */
 
 .sidenav .mat-toolbar {
-  background: #ffffff;
+  background: #0C2340;
 }
 
-.mat-toolbar.mat-primary {
+/* .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 1;
@@ -20,10 +20,10 @@
 
 .mat-list-item{
 
-}
-*/
+} */
+
 .nav li:hover{
-  background-color: #eef1ff;
+  background-color: #0C2340;
 }
 
 
@@ -36,7 +36,7 @@ a, a:hover, a:focus {
 
 .navbar {
     padding: 15px 10px;
-    background: #fff;
+    background: #0C2340;
     border: none;
     border-radius: 0;
     margin-bottom: 40px;
@@ -52,7 +52,7 @@ a, a:hover, a:focus {
 .line {
     width: 100%;
     height: 1px;
-    border-bottom: 1px dashed #ddd;
+    border-bottom: 1px dashed #0C2340;
     margin: 40px 0;
 }
 
@@ -71,7 +71,8 @@ a, a:hover, a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #7386D5;
+    /* background: #7386D5; */
+    background: #102F55;
     color: #fff;
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
@@ -84,12 +85,13 @@ a, a:hover, a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: #0C2340;
 }
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
+    border-bottom: 1px solid #073980
+    ;
 }
 
 #sidebar ul p {
@@ -103,13 +105,15 @@ a, a:hover, a:focus {
     display: block;
 }
 #sidebar ul li a:hover {
-    color: #7386D5;
+    /* color: #7386D5; */
+    color: #0C2340;
     background: #fff;
 }
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
     color: #fff;
-    background: #6d7fcc;
+    /* dddddd */
+    background: #0C2340;
 }
 
 
@@ -128,7 +132,7 @@ a[data-toggle="collapse"] {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: #143A6B;
 }
 
 ul.CTAs {
@@ -149,7 +153,7 @@ a.download {
 }
 
 a.article, a.article:hover {
-    background: #6d7fcc !important;
+    background: #0C2340 !important;
     color: #fff !important;
 }
 
@@ -158,11 +162,17 @@ a.article, a.article:hover {
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
+
+#customClass{
+    background-color: #0C2340;
+}
+
 #content {
     width: 100%;
     padding: 20px;
     min-height: 100vh;
     transition: all 0.3s;
+    color: #0C2340;
 }
 
 #sidebarCollapse {
