--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -37,10 +37,12 @@ a, a:hover, a:focus {
 .navbar {
     padding: 15px 10px;
     background: #0C2340;
+    color: white;
     border: none;
     border-radius: 0;
     margin-bottom: 40px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    width: fixed;
 }
 
 .navbar-btn {
