--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -49,7 +49,7 @@
   <!-- Page Content Holder -->
   <div id="content">
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
 
               
@@ -57,7 +57,7 @@
                   <i class="fas fa-align-justify"></i>
               </button>
 
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <div class="collapse navbar-collapse customClass" id="navbarSupportedContent">
                   <ul class="nav navbar-nav ml-auto">
                       <li class="nav-item" >
                           <a class="nav-link" *ngIf='!authenticationService.isUserLoggedIn()' routerLink="/registration">Registration</a>
