adjusting images and adding roles constraints

--- a/src/app/components/field-nav/field-nav.component.html
+++ b/src/app/components/field-nav/field-nav.component.html
@@ -21,7 +21,7 @@
               <thead>
                 <tr>
                   <th style="display: none">#</th>
-                  <th>Field Id</th>
+                  <th style="display: none">Field Id</th>
                   <th>Field Name</th>
                   <th>Field Code</th>
                 </tr>
@@ -32,7 +32,7 @@
                   (click)="navToFieldWells(currentIndex)"
                 >
                   <td style="display: none">{{ currentIndex + 1 }}</td>
-                  <td>{{ con.fieldId }}</td>
+                  <td style="display: none">{{ con.fieldId }}</td>
                   <td>{{ con.fieldName }}</td>
                   <td>{{ con.fieldCode }}</td>
                 </tr>
