--- a/src/app/components/well-nav/well-nav.component.html
+++ b/src/app/components/well-nav/well-nav.component.html
@@ -20,7 +20,7 @@
               <thead>
                 <tr>
                   <th style="display: none">#</th>
-                  <th>Well Id</th>
+                  <th style="display: none">Well Id</th>
                   <th>Well Name</th>
                   <th>Well Code</th>
                 </tr>
@@ -31,7 +31,7 @@
                   (click)="navToFieldWells(currentIndex)"
                 >
                   <td style="display: none">{{ currentIndex + 1 }}</td>
-                  <td>{{ con.wellId }}</td>
+                  <td style="display: none">{{ con.wellId }}</td>
                   <td>{{ con.wellName }}</td>
                   <td>{{ con.wellCode }}</td>
                 </tr>
