--- a/src/app/components/concession-nav/concession-nav.component.html
+++ b/src/app/components/concession-nav/concession-nav.component.html
@@ -14,11 +14,11 @@
             <div class="col-4" *ngFor="let con of allConcessions; let currentIndex = index"
                  (click)="navToConFields(currentIndex)">
 <!--              <div class="card text-center align-text-bottom p-5 bg-light mb-3 " style="height: 150px ; width: 200px ;margin-bottom: 30px;">-->
-                <div class="card text-center align-text-bottom p-5 bg-light mb-3 " style="width: 18rem">
+                <div class="card text-center align-text-bottom p-5 bg-light mb-3 " style="width: 18rem;">
 <!--                style="width: 18rem;"-->
-                <img class="card-img-top" src="assets/img/meleiha.jpeg" alt="meleiha" style="width: 300px">
+                <img class="card-img-top" src="assets/img/{{currentIndex+1}}.jpeg" alt="meleiha" style="width: 150%; height: 200%; align-self: center;">
                 <div class="card-body">
-                  <h5 class="card-title">{{ con.name }}</h5>
+                  <h5 class="card-title" style="font-size: x-large;">{{ con.name }}</h5>
 <!--                  <div class="text">-->
 <!--                    {{ con.name }}-->
 <!--                  </div>-->
