--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -69,7 +69,7 @@
                           <a class="nav-link" *ngIf='!authenticationService.isUserLoggedIn()' routerLink="/registration">Registration</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" *ngIf='!authenticationService.isUserLoggedIn()' routerLink="login">LogIn</a>
+                          <a class="nav-link" *ngIf='!authenticationService.isUserLoggedIn()' routerLink="login">Login</a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" *ngIf='authenticationService.isUserLoggedIn()' routerLink="logout">Logout</a>
